git config --list

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="manifest" href="../favicon/site.webmanifest">
+    <link rel="mask-icon" href="../favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <!-- Navbar -->
@@ -59,9 +66,10 @@
       </div>
   </nav>
   <!-- Carrusel -->
-  <div class="top">
+  <div class="col-12 col-sm-12 col-lg-12">
+   <div class="top">
   <div class="container border border-bottom-0">
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="height: 50%;">
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="height: 100%;">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -101,11 +109,12 @@
   </div>
 </div>
 </div>
+</div>
 <!-- Cards -->
 
 <div class="container border border-top-0">
   <div class="row justify-content-center" style="padding-top: 50px; padding-bottom: 50px;">
-    <div class="col-4">
+    <div class="col-12 col-sm-6 col-lg-4">
       <div class="card" style="width: 20rem;">
         <img src="img/lluvias.jpg" class="card-img-top" alt="...">
         <div class="card-body">
@@ -115,7 +124,7 @@
         </div>
       </div>
     </div>
-      <div class="col-4">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="card" style="width: 20rem;">
           <img src="img/politico.jpg" class="card-img-top" alt="...">
           <div class="card-body">
@@ -125,7 +134,7 @@
           </div>
         </div>
       </div>
-      <div class="col-4">
+      <div class="col-12 col-sm-6 col-lg-4">
         <div class="card" style="width: 20rem;">
           <img src="img/pan y carnes.jpg" class="card-img-top" alt="...">
           <div class="card-body">
