--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -60,14 +59,11 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" id="iniciarSesion" href="#">Registrarse</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="iniciarSesion" href="#">Iniciar Sesión</a>
+            <a class="nav-link" id="iniciarSesion" href="web/login.html"><i class="icon-user"></i> Iniciar Sesión</a>
           </li>
           <form class="d-flex">
             <input class="form-control me-2" type="search" placeholder="Buscar...." aria-label="Search">
-            <button class="btn btn-outline-info" type="submit">Buscar</button>
+            <button class="btn btn-outline-primary" type="submit">Buscar</button>
           </form>
         </ul>
       </div>
