--- a/web/signup.html
+++ b/web/signup.html
@@ -8,7 +8,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caos News</title>
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/signup.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -135,7 +134,7 @@
                             <div class="form-check" style="margin-bottom: 15px;">
                               <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
                               <label class="form-check-label" for="invalidCheck2">
-                                Acepto las Condiciones del servicio y Política de privacidad de Caos News
+                                Acepto las <a href="/web/terms.html">Condiciones del servicio y Política de privacidad</a> de Caos News
                               </label>
                             </div>
                           <div class="d-grid mb-2">
@@ -169,7 +168,7 @@
     <!-- Footer -->
     <footer class="text-center text-lg-start text-dark bg-danger">
         <!--Social media -->
-        <section class="d-flex justify-content-center justify-content-end p-2 border-bottom border-dark">
+        <section class="d-flex justify-content-center justify-content-end p-4 border-bottom border-dark">
             <div class="me- d-none d-lg-block">
                 <span>Síguenos:</span>
             </div>
