--- a/index.html
+++ b/index.html
@@ -85,22 +85,19 @@
             <div class="carousel-item active">
               <img src="img/marcha.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h5 class="text-danger fs-4 fw-bold">First slide label</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/caso.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h5 class="text-danger fs-4 fw-bold">Second slide label</h5>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/putin.jpg" class="d-block w-100" alt="...">
+              <a href="web/mundo.html"><img src="img/putin.jpg" class="d-block w-100" alt="..."></a>
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h5 class="text-danger fs-4 fw-bold">¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</h5> 
               </div>
             </div>
           </div>
@@ -126,7 +123,7 @@
         <div class="card" style="width: 20rem;">
           <img src="img/lluvias.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Card title <span class="badge bg-primary">Tendencia</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
             <a href="#" class="btn btn-primary">Ver más</a>
