se añade fecha al articulo

--- a/web/mundo.html
+++ b/web/mundo.html
@@ -101,15 +101,21 @@
                     </div>
                     <div class="row creditos">
                         <div class="col d-flex justify-content-between ">
-                            <span class="periodista d-flex justify-content-start">Por John Doe</span>
+                            <span class="periodista d-flex justify-content-start fw-bold">Por John Doe</span>
+                            <div class="redes-sociales">
                             <ul class="d-flex justify-content-start">
                                 <li><a href="" class="me-4 fs-4 text-reset icon-facebook"></a></li> 
                                 <li><a href="" class="me-4 fs-4 text-reset icon-twitter"></a></li>
                                 <li><a href="" class="me-4 fs-4 text-reset icon-instagram"></a></li>
                             </ul>
                         </div>
+                        </div>
                     </div>
-            
+                    <div class="col">
+                        <div class="fecha">
+                            <span class="fs-6 fw-light">08 abr. 2022 - 18:31 hrs. </span>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
