--- a/web/mundo.html
+++ b/web/mundo.html
@@ -84,7 +84,7 @@
                 <li class="breadcrumb-item active" aria-current="page">Library</li>
             </ol>
         </nav>
-        <div class="bg-image">
+        <div class="bg-image" style="background-image: url(../img/putin.jpg);">
         </div>
         <div class="container">
             <div id="article">
@@ -113,10 +113,18 @@
                     </div>
                     <div class="col">
                         <div class="fecha">
-                            <span class="fs-6 fw-light">08 abr. 2022 - 18:31 hrs. </span>
+                            <span class="fw-light">08 abr. 2022 - 18:31 hrs. </span>
                         </div>
                     </div>
                     </div>
+                    <!-- contenido de la nota -->
+                    <div class="contenido-nota">
+                        <h2 class="my-3 h2 fw-bolder text-danger">¿Qué paso?</h2>
+                        <p class="fs-4 justify-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+
+                    </div>
+
+
                 </div>
             </div>
         </div>
