--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
     <div class="row justify-content-center" style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;"">
       <div class="col-12 col-sm-6 col-lg-4">
         <div class="card" style="width: 20rem;">
-          <img src="img/lluvias.jpg" class="card-img-top" alt="...">
+          <img src="img/noticia1.jpg" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Card title <span class="badge bg-primary">Tendencia</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="#" class="btn btn-primary">Ver más</a>
+            <a href="web/nacional.html" class="btn btn-primary">Ver más</a>
           </div>
         </div>
       </div>
