--- a/web/mundo.html
+++ b/web/mundo.html
@@ -121,9 +121,53 @@
                     <div class="contenido-nota">
                         <h2 class="my-3 h2 fw-bolder text-danger">¿Qué paso?</h2>
                         <p class="fs-4 justify-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
-
+                        <p class="fs-4 justify-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                        <br>
+                        
+                        <!-- Publicidad -->
+                        <div class="relacionados d-flex aligns-items-center justify-content-center">
+                            <div class="card w-75 text-white bg-danger ">
+                                <div class="card-body">
+                                  <h5 class="card-title">Te puede interesar</h5>
+                                  <p class="card-text"><span class="fw-bold text-dark">&raquo;</span> Una apática Universidad Católica cayó en San Carlos ante Deportes La Serena</p>
+                                  <a href="#" class="btn btn-primary">Ver más</a>
+                                </div>
+                              </div>
+                        </div>
+                        <br>
+                        <h2 class="my-3 h2 fw-bolder text-danger">¿Por qué las sancionaron?</h2>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                        <br>
+                        <div class="text-center">
+                        <img src="../img/putin2.jpg" class="img-fluid shadow-2-strong" alt=""></div>
+                        <br>
+                        <h2 class="my-3 h2 fw-bolder text-danger">¿Qué se sabe de ellas?</h2>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, vitae! Nesciunt excepturi veniam autem, quos error ullam nam facere dolorem maxime veritatis odit, voluptatum esse libero officiis culpa atque, reprehenderit nostrum eos assumenda officia. Totam quia voluptatem iure a qui.</p>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi iure, molestiae minus aperiam fugiat nobis distinctio autem quos labore consequatur.</p>
+                        <br>
+                        <div class="text-center">
+                            <img src="../img/putin3.jpg" class="img-fluid shadow-2-strong" alt=""></div>
+                        <br>
+                        <h2 class="my-3 h2 fw-bolder text-danger">"Estoy orgulloso de ellas”</h2>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, vitae! Nesciunt excepturi veniam autem, quos error ullam nam facere dolorem maxime veritatis odit, voluptatum esse libero officiis culpa atque, reprehenderit nostrum eos assumenda officia. Totam quia voluptatem iure a qui.</p>
+                        <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi iure, molestiae minus aperiam fugiat nobis distinctio autem quos labore consequatur.</p>
+                        <br>
                     </div>
-
+                    <div class="card">
+                        <h5 class="card-header text-center bg-dark text-white">Leer más de</h5>
+                        <div class="card-body text-center">
+                            <button type="button" class="btn btn-outline-primary">Putin</button>
+                            <button type="button" class="btn btn-outline-secondary">Rusia</button>
+                            <button type="button" class="btn btn-outline-success">Conflicto</button>
+                            <button type="button" class="btn btn-outline-danger">Guerra</button>
+                            <button type="button" class="btn btn-outline-warning">Hijas</button>
+                        </div>
+                      </div>
 
                 </div>
             </div>
