corrección de formato

--- a/web/Politica.html
+++ b/web/Politica.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caos News</title>
+    <title>"La economía va a estar más débil": Ministro Marcel afirma que quinto retiro podría complicar programa de Gobierno" - Caos News</title>
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/articulo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -82,7 +82,7 @@
                 <li class="breadcrumb-item active" aria-current="page">Library</li>
             </ol>
         </nav>
-        <div class="bg-image" style="background-image: url(../img/politico.jpg);">
+        <div class="bg-image" style="background-image: url(../img/politca.jpg);">
         </div>
         <div class="container">
             <div id="article">
@@ -90,54 +90,16 @@
                     <div class="col-sm-6 col-md-8">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="nav-link active fw-bold" aria-current="page" href="#">Politica</a>
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">Política</a>
                             </li>
                         </ul>
                         <h1 class="mb-3 h2 text-center fw-bolder text-danger">"La economía va a estar más débil":
                             Ministro Marcel afirma que quinto retiro podría complicar programa de
                             Gobierno"</h1>
-                        <div class="container">
-
-                            <h3>El titular de Hacienda aseveró que algunos de los efectos que podría tener es que
-                                aumente aún más la
-                                inflación y que haya menos recursos fiscales.</h3>
-                            <p>El ministro de Hacienda, Mario Marcel, se refirió este domingo una vez más a la
-                                posibilidad de que se apruebe
-                                un quinto retiro de los fondos de pensiones, destacando lo negativo que podría ser para
-                                la economía nacional
-                                y que incluso podría complicar la ejecución del programa de Gobierno.
-
-                                El secretario de Estado señaló que "un nuevo incremento en fondos de pensiones significa
-                                un aumento
-                                permanente de pago de intereses por parte del Estado de 2.500 millones de dólares".
-
-                            </p>
-                            <p>"Estamos hablando de un 60% aproximadamente del paquete que acabamos de anunciar, con la
-                                diferencia que es
-                                permanente", aseveró.
-
-                                Fue así como destacó que "eso significa que la economía va estar más débil, va a
-                                enfrentar mayor inflación
-                                (...) Va a haber menos recursos fiscales, todas esas cosas por supuesto que dificultan
-                                el programa de
-                                gobierno", añadió.
-
-                                Cabe señalar que el Gobierno se ha opuesto permanentemente a la aprobación de un
-                                eventual quinto retiro,
-                                postura que no es unánime dentro de la coalición, ya que algunos parlamentarios no han
-                                descartado apoyar la
-                                medida, pese a las advertencias de que esto pdoría profundizar la ya ascendente
-                                inflación.
-
-
-                            </p>
-
-                        </div>
                     </div>
                     <div class="row creditos">
                         <div class="col d-flex justify-content-between ">
-                            <span class="periodista d-flex justify-content-start fw-bold">Por Matías Bobadilla
-                                Domingo 10 de Abr, 2022 - 13:14</span>
+                            <span class="periodista d-flex justify-content-start fw-bold">Por Matías Bobadilla</span>
                             <div class="redes-sociales">
                                 <ul class="d-flex justify-content-start">
                                     <li><a href="" class="me-4 fs-4 text-reset icon-facebook"></a></li>
@@ -146,9 +108,57 @@
                                 </ul>
                             </div>
                         </div>
-
                     </div>
+                        <div class="col">
+                            <div class="fecha">
+                                <span class="fw-light">10 abr. 2022 - 13:14 hrs. </span>
+                            </div>
+                        </div>
+                    
                 </div>
+                <div class="contenido-nota">
+                    <h3 class="my-3 h3 fw-bolder text-danger">El titular de Hacienda aseveró que algunos de los efectos
+                        que podría tener es que aumente aún más la inflación y que haya menos recursos fiscales.</h3>
+                    <p class="fs-4 justify-text">El ministro de Hacienda, Mario Marcel, se refirió este domingo una vez
+                        más a la posibilidad de que se apruebe un quinto retiro de los fondos de pensiones, destacando
+                        lo negativo que podría ser para la economía nacional y que incluso podría complicar la ejecución
+                        del programa de Gobierno.</p>
+                        <br>
+                        <!-- Publicidad -->
+                        <div class="relacionados d-flex aligns-items-center justify-content-center">
+                            <div class="card w-75 text-white bg-danger ">
+                                <div class="card-body">
+                                  <h5 class="card-title">Te puede interesar</h5>
+                                  <p class="card-text"><span class="fw-bold text-dark">&raquo;</span>¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</p>
+                                  <a href="mundo.html" class="btn btn-primary">Ver más</a>
+                                </div>
+                              </div>
+                        </div>
+                        <br>
+                    <p class="fs-4 justify-text">El secretario de Estado señaló que "un nuevo incremento en fondos de
+                        pensiones significa un aumento permanente de pago de intereses por parte del Estado de 2.500
+                        millones de dólares".</p>
+                    <p class="fs-4 justify-text">Fue así como destacó que "eso significa que la economía va estar más
+                        débil, va a enfrentar mayor inflación (...) Va a haber menos recursos fiscales, todas esas cosas
+                        por supuesto que dificultan el programa de gobierno", añadió.</p>
+                    <p class="fs-4 justify-text">Cabe señalar que el Gobierno se ha opuesto permanentemente a la
+                        aprobación de un eventual quinto retiro, postura que no es unánime dentro de la coalición, ya
+                        que algunos parlamentarios no han descartado apoyar la medida, pese a las advertencias de que
+                        esto podría profundizar la ya ascendente inflación.</p>
+                </div>
+                <div class="card">
+                    <h5 class="card-header text-center bg-dark text-white"><i class="icon-glasses text-warning"></i> Leer más de</h5>
+                    <div class="card-body text-center">
+                        <button type="button" class="btn btn-outline-primary">Nacional</button>
+                        <button type="button" class="btn btn-outline-secondary">Gobierno</button>
+                        <button type="button" class="btn btn-outline-success">Boric</button>
+                        <button type="button" class="btn btn-outline-danger">Inflación</button>
+                        <button type="button" class="btn btn-outline-warning">Ministros</button>
+                    </div>
+                  </div>
+
+
+
             </div>
         </div>
     </div>
