--- a/web/mundo.html
+++ b/web/mundo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</title>
+    <title>¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin? - Caos News</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -96,8 +96,7 @@
                             </li>
                         </ul>
                         <h1 class="mb-3 h2 text-center fw-bolder text-danger">¿Quiénes son y por qué sancionaron a las
-                            hijas
-                            de Vladimir Putin?</h1>
+                            hijas de Vladimir Putin?</h1>
                     </div>
                     <div class="row creditos">
                         <div class="col d-flex justify-content-between ">
@@ -158,8 +157,9 @@
                         <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi iure, molestiae minus aperiam fugiat nobis distinctio autem quos labore consequatur.</p>
                         <br>
                     </div>
+                    <!-- Ver más -->
                     <div class="card">
-                        <h5 class="card-header text-center bg-dark text-white">Leer más de</h5>
+                        <h5 class="card-header text-center bg-dark text-white"><i class="icon-glasses text-warning"></i> Leer más de</h5>
                         <div class="card-body text-center">
                             <button type="button" class="btn btn-outline-primary">Putin</button>
                             <button type="button" class="btn btn-outline-secondary">Rusia</button>
