--- a/web/contacto.html
+++ b/web/contacto.html
@@ -53,9 +53,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="#">Nacional</a></li>
-                            <li><a class="dropdown-item" href="#">Mundo</a></li>
-                            <li><a class="dropdown-item" href="#">Deportes</a></li>
-                            <li><a class="dropdown-item" href="#">Política</a></li>
+                            <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
+                            <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
+                            <li><a class="dropdown-item" href="Politica.html">Política</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -63,7 +63,8 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="iniciarSesion" href="login.html"><i class="icon-user"></i> Iniciar Sesión</a>
+                        <a class="nav-link" id="iniciarSesion" href="login.html"><i class="icon-user"></i> Iniciar
+                            Sesión</a>
                     </li>
                     <form class="d-flex">
                         <input class="form-control me-2" type="search" placeholder="Buscar...." aria-label="Search">
