--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <li><a class="dropdown-item" href="#">Nacional</a></li>
-              <li><a class="dropdown-item" href="#">Mundo</a></li>
-              <li><a class="dropdown-item" href="#">Deportes</a></li>
-              <li><a class="dropdown-item" href="#">Política</a></li>
+              <li><a class="dropdown-item" href="web/mundo.html">Mundo</a></li>
+              <li><a class="dropdown-item" href="web/deportes.html">Deportes</a></li>
+              <li><a class="dropdown-item" href="web/Politica.html">Política</a></li>
             </ul>
           </li>
         </ul>
@@ -83,6 +83,12 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
+              <a href="web/mundo.html"><img src="img/putin.jpg" class="d-block w-100" alt="..."></a>
+              <div class="carousel-caption d-none d-md-block">
+                <h5 class="text-danger fs-4 fw-bold">¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</h5> 
+              </div>
+            </div>
+            <div class="carousel-item">
               <img src="img/marcha.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
                 <h5 class="text-danger fs-4 fw-bold">First slide label</h5>
@@ -94,12 +100,7 @@
                 <h5 class="text-danger fs-4 fw-bold">Second slide label</h5>
               </div>
             </div>
-            <div class="carousel-item">
-              <a href="web/mundo.html"><img src="img/putin.jpg" class="d-block w-100" alt="..."></a>
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-danger fs-4 fw-bold">¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</h5> 
-              </div>
-            </div>
+            
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
             data-bs-slide="prev">
