--- a/web/Politica.html
+++ b/web/Politica.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"La economía va a estar más débil": Ministro Marcel afirma que quinto retiro podría complicar programa de Gobierno" - Caos News</title>
+    <title>"La economía va a estar más débil": Ministro Marcel afirma que quinto retiro podría complicar programa de
+        Gobierno" - Caos News</title>
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
     <link rel="stylesheet" href="../css/articulo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -51,9 +52,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="#">Nacional</a></li>
-                            <li><a class="dropdown-item" href="#">Mundo</a></li>
-                            <li><a class="dropdown-item" href="#">Deportes</a></li>
-                            <li><a class="dropdown-item" href="#">Política</a></li>
+                            <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
+                            <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
+                            <li><a class="dropdown-item" href="Politica.html">Política</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -78,8 +79,8 @@
         <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
             aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Library</li>
+                <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Política</li>
             </ol>
         </nav>
         <div class="bg-image" style="background-image: url(../img/politca.jpg);">
@@ -109,12 +110,12 @@
                             </div>
                         </div>
                     </div>
-                        <div class="col">
-                            <div class="fecha">
-                                <span class="fw-light">10 abr. 2022 - 13:14 hrs. </span>
-                            </div>
+                    <div class="col">
+                        <div class="fecha">
+                            <span class="fw-light">10 abr. 2022 - 13:14 hrs. </span>
                         </div>
-                    
+                    </div>
+
                 </div>
                 <div class="contenido-nota">
                     <h3 class="my-3 h3 fw-bolder text-danger">El titular de Hacienda aseveró que algunos de los efectos
@@ -123,18 +124,19 @@
                         más a la posibilidad de que se apruebe un quinto retiro de los fondos de pensiones, destacando
                         lo negativo que podría ser para la economía nacional y que incluso podría complicar la ejecución
                         del programa de Gobierno.</p>
-                        <br>
-                        <!-- Publicidad -->
-                        <div class="relacionados d-flex aligns-items-center justify-content-center">
-                            <div class="card w-75 text-white bg-danger ">
-                                <div class="card-body">
-                                  <h5 class="card-title">Te puede interesar</h5>
-                                  <p class="card-text"><span class="fw-bold text-dark">&raquo;</span>¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</p>
-                                  <a href="mundo.html" class="btn btn-primary">Ver más</a>
-                                </div>
-                              </div>
+                    <br>
+                    <!-- Publicidad -->
+                    <div class="relacionados d-flex aligns-items-center justify-content-center">
+                        <div class="card w-75 text-white bg-danger ">
+                            <div class="card-body">
+                                <h5 class="card-title">Te puede interesar</h5>
+                                <p class="card-text"><span class="fw-bold text-dark">&raquo;</span>¿Quiénes son y por
+                                    qué sancionaron a las hijas de Vladimir Putin?</p>
+                                <a href="mundo.html" class="btn btn-primary">Ver más</a>
+                            </div>
                         </div>
-                        <br>
+                    </div>
+                    <br>
                     <p class="fs-4 justify-text">El secretario de Estado señaló que "un nuevo incremento en fondos de
                         pensiones significa un aumento permanente de pago de intereses por parte del Estado de 2.500
                         millones de dólares".</p>
@@ -147,7 +149,8 @@
                         esto podría profundizar la ya ascendente inflación.</p>
                 </div>
                 <div class="card">
-                    <h5 class="card-header text-center bg-dark text-white"><i class="icon-glasses text-warning"></i> Leer más de</h5>
+                    <h5 class="card-header text-center bg-dark text-white"><i class="icon-glasses text-warning"></i>
+                        Leer más de</h5>
                     <div class="card-body text-center">
                         <button type="button" class="btn btn-outline-primary">Nacional</button>
                         <button type="button" class="btn btn-outline-secondary">Gobierno</button>
@@ -155,7 +158,7 @@
                         <button type="button" class="btn btn-outline-danger">Inflación</button>
                         <button type="button" class="btn btn-outline-warning">Ministros</button>
                     </div>
-                  </div>
+                </div>
 
 
 
