--- a/web/deportes.html
+++ b/web/deportes.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caos News</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/aticulo.css">
+    <title>Una apática Universidad Católica cayó en San Carlos ante Deportes La Serena - Caos News</title>
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="../css/articulo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/fontello.css">
+    <link rel="stylesheet" href="../css/fontello.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -39,10 +39,10 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="web/contacto.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -51,9 +51,9 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="#">Nacional</a></li>
-                            <li><a class="dropdown-item" href="#">Mundo</a></li>
-                            <li><a class="dropdown-item" href="deportes.htm">Deportes</a></li>
-                            <li><a class="dropdown-item" href="#">Política</a></li>
+                            <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
+                            <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
+                            <li><a class="dropdown-item" href="Politica.html">Política</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -75,8 +75,8 @@
         <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
             aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="#">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Library</li>
+                <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Deportes</li>
             </ol>
         </nav>
         <div class="bg-image" style="background-image: url(../img/deportes2.jpg);">
@@ -87,10 +87,11 @@
                     <div class="col-sm-6 col-md-8">
                         <ul class="nav">
                             <li class="nav-item">
-                                <a class="nav-link active fw-bold" aria-current="page" href="#">Deportes</a>
+                                <a class="nav-link active fw-bold" aria-current="page" href="#">Mundo</a>
                             </li>
                         </ul>
-                        <h1 class="mb-3 h2 text-center fw-bolder text-danger">La UC pierde de local contra Deportes la Serena por 2 a 0</h1>
+                        <h1 class="mb-3 h2 text-center fw-bolder text-danger">Una apática Universidad Católica cayó en
+                            San Carlos ante Deportes La Serena</h1>
                     </div>
                     <div class="row creditos">
                         <div class="col d-flex justify-content-between ">
@@ -116,118 +117,84 @@
                     <p class="fs-4 justify-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque
                         veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus.
                         Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <p class="fs-4 justify-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eaque
+                        veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius voluptatibus.
+                        Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <br>
+
+                    <!-- Publicidad -->
+                    <div class="relacionados d-flex aligns-items-center justify-content-center">
+                        <div class="card w-75 text-white bg-danger ">
+                            <div class="card-body">
+                                <h5 class="card-title">Te puede interesar</h5>
+                                <p class="card-text"><span class="fw-bold text-dark">&raquo;</span>"La economía va a
+                                    estar más débil": Ministro Marcel afirma que quinto retiro podría complicar programa
+                                    de Gobierno"</p>
+                                <a href="Politica.html" class="btn btn-primary">Ver más</a>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+
+                    <h2 class="my-3 h2 fw-bolder text-danger">¿Por qué las sancionaron?</h2>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius
+                        voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius
+                        voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <br>
+
+                    <h2 class="my-3 h2 fw-bolder text-danger">¿Qué se sabe de ellas?</h2>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius
+                        voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius
+                        voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Autem, vitae! Nesciunt excepturi veniam autem, quos error ullam nam facere dolorem maxime
+                        veritatis odit, voluptatum esse libero officiis culpa atque, reprehenderit nostrum eos assumenda
+                        officia. Totam quia voluptatem iure a qui.</p>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Commodi iure, molestiae minus aperiam fugiat nobis distinctio autem quos labore
+                        consequatur.</p>
+                    <br>
+
+                    <h2 class="my-3 h2 fw-bolder text-danger">"Estoy orgulloso de ellas”</h2>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius
+                        voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Eveniet eaque veniam temporibus numquam inventore quos et? Pariatur tempora impedit eius
+                        voluptatibus. Laudantium delectus rerum cumque aliquam velit. Esse, repudiandae molestiae!</p>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Autem, vitae! Nesciunt excepturi veniam autem, quos error ullam nam facere dolorem maxime
+                        veritatis odit, voluptatum esse libero officiis culpa atque, reprehenderit nostrum eos assumenda
+                        officia. Totam quia voluptatem iure a qui.</p>
+                    <p class="fs-4" style="text-align: justify;">Lorem ipsum dolor sit amet consectetur adipisicing
+                        elit. Commodi iure, molestiae minus aperiam fugiat nobis distinctio autem quos labore
+                        consequatur.</p>
+                    <br>
                 </div>
+                <!-- Ver más -->
+                <div class="card">
+                    <h5 class="card-header text-center bg-dark text-white"><i class="icon-glasses text-warning"></i>Leer
+                        más de</h5>
+                    <div class="card-body text-center">
+                        <button type="button" class="btn btn-outline-primary">Universidad Católica</button>
+                        <button type="button" class="btn btn-outline-secondary">Chile</button>
+                        <button type="button" class="btn btn-outline-success">La Serena</button>
+                        <button type="button" class="btn btn-outline-danger">Derrota</button>
+                        <button type="button" class="btn btn-outline-warning">Fútbol</button>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
-    <div class="container border border-top-0">
-        <h2 class="h2 text-uppercase text-decoration-underline text-center p-3">Deportes</h2>
-        <h4 class="h2 text-uppercase text-decoration-underline text-center p-3">Nacional</h4>
-        <div class="row justify-content-center"
-            style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;">
-            <div class="card" style="max-width: 100%;">
-                <div class="row g-0">
-                    <div class="col-sm-5">
-                        <img src="img/deportes.jpg" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-sm-7">
-                        <div class="card-body">
-                            <h5 class="card-title">Una apática Universidad Católica cayó en San Carlos ante Deportes La
-                                Serena</h5>
-                            <p class="card-text"><small class="text-muted">Por John Doe</small></p>
-                            <p class="card-text text-justify">Universidad Católica cerró una semana para el olvido este
-                                sábado al
-                                caer en condición de local por 0-2 ante Deportes La Serena, en partido jugado en San
-                                Carlos
-                                de
-                                Apoquindo y correspondiente a la novena fecha del Campeonato Nacional 2022.</p>
-                            <a href="#" class="btn btn-primary stretched-link">Ver más</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center"
-            style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;">
-            <div class="card" style="max-width: 100%;">
-                <div class="row g-0">
-                    <div class="col-sm-5">
-                        <img src="img/deportes3.jpeg" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-sm-7">
-                        <div class="card-body">
-                            <h5 class="card-title">Unión Española sorprendió a Colo Colo y alcanzó la punta del Torneo
-                                Nacional 2022</h5>
-                            <p class="card-text"><small class="text-muted">Por Andrés Muñoz</small></p>
-                            <p class="card-text text-justify">Los albos comenzaron en ventaja, pero con dos goles de
-                                Leandro Garate el cuadro hispano dio vuelta el marcador y se quedó con el triunfo en
-                                Santa Laura.</p>
-                            <a href="#" class="btn btn-primary stretched-link">Ver más</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row justify-content-center"
-            style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;">
-            <div class="card" style="max-width: 100%;">
-                <div class="row g-0">
-                    <div class="col-sm-5">
-                        <img src="img/deportes4.jpeg" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-sm-7">
-                        <div class="card-body">
-                            <h5 class="card-title">Coquimbo Unido sale del fondo de la tabla venciendo a la Universidad
-                                de Chile</h5>
-                            <p class="card-text"><small class="text-muted">Por Andrés Muñoz</small></p>
-                            <p class="card-text text-justify">Con gol de Nicolás Gauna en los descuentos, el
-                                cuadro pirata sumó su segundo triunfo del campeonato y escaló a la duodécima posición.
-                                Por su parte, los azules cosecharon su tercera derrota en los últimos cinco compromisos.
-                            </p>
-                            <a href="#" class="btn btn-primary stretched-link">Ver más</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
-    <!-- Cards -->
-    <div class="container border border-top-0">
-        <h2 class="h2 text-uppercase text-decoration-underline text-center p-3">Interacional</h2>
-        <div class="row justify-content-center"
-            style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;">
-            <div class=" col-12 col-sm-6 col-lg-4">
-                <div class="card" style="width: 20rem;">
-                    <img src="img/deportes5.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Villarreal venció 1-0 al Bayern Munich</h5>
-                        <p class="card-text">Villarreal derrotó por la mínima diferencia al Bayern Munich en el Estadio de La Cerámica por la ida de cuartos de final de Champions League.</p>
-                        <a href="#" class="btn btn-primary">Ver más</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-                <div class="card" style="width: 20rem;">
-                    <img src="img/deportes6.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Benzema se exhibe y el Real Madrid da un paso de gigante</h5>
-                        <p class="card-text">El Real Madrid obtuvo un valioso triunfo en Stamford Bridge ante el Chelsea para tomar ventaja en los cuartos de la Champions.</p>
-                        <a href="#" class="btn btn-primary">Ver más</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-sm-6 col-lg-4">
-                <div class="card" style="width: 20rem;">
-                    <img src="img/deportes7.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Manchester City y Liverpool empataron</h5>
-                        <p class="card-text">En un duelo apasionante, el líder y su escolta igualaron 2-2 y los dirigidos por Pep siguen en la punta, pero no se pudieron despegar.</p>
-                        <a href="#" class="btn btn-primary">Ver más</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
     <!-- Footer -->
     <footer class="text-center text-lg-start text-dark bg-danger">
         <!--Social media -->
@@ -336,6 +303,10 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
+</body>
+
+</html>
+
 </body>
 
 </html>
