se añade la página de publicación de noticias

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top">
     <div class="container-fluid">
@@ -117,7 +117,7 @@
     </div>
   </div>
   <!-- Cards -->
-  <div class="container border border-top-0">
+  <div class="container border border-top-0" id="contenido">
     <h2 class="h2 text-uppercase text-decoration-underline text-center p-3">Nacional</h2>
     <div class="row justify-content-center" style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;"">
       <div class="col-12 col-sm-6 col-lg-4">
@@ -180,46 +180,8 @@
       </div>
   </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   <!-- Footer -->
-  <footer class="text-center text-lg-start text-dark bg-danger">
+  <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
     <!--Social media -->
     <section class="d-flex justify-content-center justify-content-end p-4 border-bottom border-dark">
       <div class="me- d-none d-lg-block">
