--- a/web/contacto.html
+++ b/web/contacto.html
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger sticky-top">
         <div class="container-fluid">
@@ -118,7 +118,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-center text-lg-start text-dark bg-danger">
+    <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
         <!--Social media -->
         <section class="d-flex justify-content-center justify-content-end p-4 border-bottom border-dark">
             <div class="me- d-none d-lg-block">
