--- a/web/escribir.html
+++ b/web/escribir.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"La economía va a estar más débil": Ministro Marcel afirma que quinto retiro podría complicar programa de
-        Gobierno" - Caos News</title>
+    <title>Formulario de Publicación de Noticias - Caos News</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/articulo.css">
+    <link rel="stylesheet" href="../css/escribir.css">
+    <!-- <link rel="stylesheet" href="../css/articulo.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/fontello.css">
@@ -24,6 +27,8 @@
     <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+
+
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -43,7 +48,7 @@
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="../web/contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
@@ -73,121 +78,48 @@
             </div>
     </nav>
 
-
-
-    <div class="container" style="margin-top: 15px;">
-        <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);"
-            aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="../index.html">Inicio</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Política</li>
-            </ol>
-        </nav>
-        <div class="bg-image" style="background-image: url(../img/politca.jpg);">
-        </div>
-        <div class="container">
-            <div id="article">
-                <div class="row aligns-items-center justify-content-center">
-                    <div class="col-sm-6 col-md-8">
-                        <ul class="nav">
-                            <li class="nav-item">
-                                <a class="nav-link active fw-bold" aria-current="page" href="#">Política</a>
-                            </li>
-                        </ul>
-                        <h1 class="mb-3 h2 text-center fw-bolder text-danger">"La economía va a estar más débil":
-                            Ministro Marcel afirma que quinto retiro podría complicar programa de
-                            Gobierno"</h1>
+    <!-- Contenido -->
+    <div class="container border border-bottom-0">
+        <div class="top p-4">
+            <h1 class="text-center text-danger">Escritura de Artículo</h1>
+            <form action="post" style="margin: 5%;">
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1"></label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="12"
+                        placeholder="Ingrese su texto..."></textarea>
+                </div>
+                <div class="input-group mb-3 py-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon1">#</span>
                     </div>
-                    <div class="row creditos">
-                        <div class="col d-flex justify-content-between ">
-                            <span class="periodista d-flex justify-content-start fw-bold">Por Matías Bobadilla</span>
-                            <div class="redes-sociales">
-                                <ul class="d-flex justify-content-start">
-                                    <li><a href="" class="me-4 fs-4 text-reset icon-facebook"></a></li>
-                                    <li><a href="" class="me-4 fs-4 text-reset icon-twitter"></a></li>
-                                    <li><a href="" class="me-4 fs-4 text-reset icon-instagram"></a></li>
-                                </ul>
+                    <input type="text" class="form-control" placeholder="Etiquetas" aria-label="Etiquetas"
+                        aria-describedby="basic-addon1">
+                </div>
+                <div class="row justify-content-end">
+                    <div class="col-sm-6 col-md-5 col-lg-2">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown">
+                                Categoría
+                            </button>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Mundo</a>
+                                <a class="dropdown-item" href="#">Política</a>
+                                <a class="dropdown-item" href="#">Nacional</a>
+                                <a class="dropdown-item" href="#">Deportes</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="fecha">
-                            <span class="fw-light">10 abr. 2022 - 13:14 hrs. </span>
+                    <div class="row justify-content-end py-3">
+                        <div class="col-sm-6 col-md-5 col-lg-2">
+                            <button type="submit" class="btn btn-danger">Subir</button>
                         </div>
                     </div>
-
                 </div>
-                <div class="contenido-nota">
-                    <h3 class="my-3 h3 fw-bolder text-danger">El titular de Hacienda aseveró que algunos de los efectos
-                        que podría tener es que aumente aún más la inflación y que haya menos recursos fiscales.</h3>
-                    <p class="fs-4 justify-text">El ministro de Hacienda, Mario Marcel, se refirió este domingo una vez
-                        más a la posibilidad de que se apruebe un quinto retiro de los fondos de pensiones, destacando
-                        lo negativo que podría ser para la economía nacional y que incluso podría complicar la ejecución
-                        del programa de Gobierno.</p>
-                    <br>
-                    <!-- Publicidad -->
-                    <div class="relacionados d-flex aligns-items-center justify-content-center">
-                        <div class="card w-75 text-white bg-danger ">
-                            <div class="card-body">
-                                <h5 class="card-title">Te puede interesar</h5>
-                                <p class="card-text"><span class="fw-bold text-dark">&raquo;</span>¿Quiénes son y por
-                                    qué sancionaron a las hijas de Vladimir Putin?</p>
-                                <a href="mundo.html" class="btn btn-primary">Ver más</a>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <p class="fs-4 justify-text">El secretario de Estado señaló que "un nuevo incremento en fondos de
-                        pensiones significa un aumento permanente de pago de intereses por parte del Estado de 2.500
-                        millones de dólares".</p>
-                    <p class="fs-4 justify-text">Fue así como destacó que "eso significa que la economía va estar más
-                        débil, va a enfrentar mayor inflación (...) Va a haber menos recursos fiscales, todas esas cosas
-                        por supuesto que dificultan el programa de gobierno", añadió.</p>
-                    <p class="fs-4 justify-text">Cabe señalar que el Gobierno se ha opuesto permanentemente a la
-                        aprobación de un eventual quinto retiro, postura que no es unánime dentro de la coalición, ya
-                        que algunos parlamentarios no han descartado apoyar la medida, pese a las advertencias de que
-                        esto podría profundizar la ya ascendente inflación.</p>
-                </div>
-                <div class="card">
-                    <h5 class="card-header text-center bg-dark text-white"><i class="icon-glasses text-warning"></i>
-                        Leer más de</h5>
-                    <div class="card-body text-center">
-                        <button type="button" class="btn btn-outline-primary">Nacional</button>
-                        <button type="button" class="btn btn-outline-secondary">Gobierno</button>
-                        <button type="button" class="btn btn-outline-success">Boric</button>
-                        <button type="button" class="btn btn-outline-danger">Inflación</button>
-                        <button type="button" class="btn btn-outline-warning">Ministros</button>
-                    </div>
-                </div>
-
-
-
-            </div>
+                
+            </form>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <!-- Footer -->
     <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
         <!--Social media -->
@@ -288,14 +220,15 @@
 
     </footer>
     <!-- Footer -->
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
     <script src="js/script.js"></script>
+
+</body>
+
+</html>
+
 </body>
 
 </html>
