cambios minimos en el diseño

--- a/web/escribir.html
+++ b/web/escribir.html
@@ -82,13 +82,13 @@
     <div class="container border border-bottom-0">
         <form action="post">
             <div class="top p-4">
-                <h1 class="text-center text-danger">Escritura de Artículo</h1>
+                <h1 class="text-center  titulo-web">Escritura de Artículo</h1>
                 <form action="post" style="margin: 5%;">
             </div>
             <div class="form-group">
                 <div class="mb-1">
                     <label for="exampleFormControlInput1" class="form-label">Título</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+                    <input type="text" class="form-control" id="validationDefault03" required>
                 </div>
                 <label for="exampleFormControlTextarea1"></label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="12"
