cambios de diseño

--- a/web/contacto.html
+++ b/web/contacto.html
@@ -52,7 +52,7 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Nacional</a></li>
+                            <li><a class="dropdown-item" href="nacional.html">Nacional</a></li>
                             <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
                             <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
                             <li><a class="dropdown-item" href="Politica.html">Política</a></li>
