--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               Categorías
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Nacional</a></li>
+              <li><a class="dropdown-item" href="web/nacional.html">Nacional</a></li>
               <li><a class="dropdown-item" href="web/mundo.html">Mundo</a></li>
               <li><a class="dropdown-item" href="web/deportes.html">Deportes</a></li>
               <li><a class="dropdown-item" href="web/Politica.html">Política</a></li>
@@ -122,9 +122,9 @@
     <div class="row justify-content-center" style="padding-top: 20px; padding-bottom: 50px; margin-left: 5%; margin-right: 5%;"">
       <div class="col-12 col-sm-6 col-lg-4">
         <div class="card" style="width: 20rem;">
-          <img src="img/noticia1.jpg" class="card-img-top" alt="...">
+          <img src="img/accidente.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">Card title <span class="badge bg-primary">Tendencia</span></h5>
+            <h5 class="card-title">Joven hallado muerto en Coronel <span class="badge bg-primary">Tendencia</span></h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
             <a href="web/nacional.html" class="btn btn-primary">Ver más</a>
