--- a/web/deportes.html
+++ b/web/deportes.html
@@ -50,7 +50,7 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Nacional</a></li>
+                            <li><a class="dropdown-item" href="nacional.html">Nacional</a></li>
                             <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
                             <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
                             <li><a class="dropdown-item" href="Politica.html">Política</a></li>
@@ -61,7 +61,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" id="iniciarSesion" href="web/login.html"><i class="icon-user"></i> Iniciar
+                        <a class="nav-link" id="iniciarSesion" href="login.html"><i class="icon-user"></i> Iniciar
                             Sesión</a>
                     </li>
                     <form class="d-flex">
@@ -302,7 +302,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
