--- a/web/escribir.html
+++ b/web/escribir.html
@@ -20,6 +20,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <!-- Tiny MC -->
+    <script src="https://cdn.tiny.cloud/1/8l8m0j6ztkpaf38bwic7ipvi8ioyez7mb801f53jk8ik7ygw/tinymce/6/tinymce.min.js"
+        referrerpolicy="origin"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="../img/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../img/favicon/favicon-16x16.png">
@@ -27,8 +30,6 @@
     <link rel="mask-icon" href="../img/favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-
-
 </head>
 
 <body class="d-flex flex-column min-vh-100">
@@ -80,46 +81,80 @@
 
     <!-- Contenido -->
     <div class="container border border-bottom-0">
-        <div class="top p-4">
-            <h1 class="text-center text-danger">Escritura de Artículo</h1>
-            <form action="post" style="margin: 5%;">
-                <div class="form-group">
-                    <label for="exampleFormControlTextarea1"></label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="12"
-                        placeholder="Ingrese su texto..."></textarea>
+        <form action="post">
+            <div class="top p-4">
+                <h1 class="text-center  titulo-web">Escritura de Artículo</h1>
+                <form action="post" style="margin: 5%;">
+            </div>
+            <!-- Formulario -->
+            <div class="form-group">
+                <div class="mb-1">
+                    <label for="exampleFormControlInput1" class="form-label">Título</label>
+                    <input type="text" class="form-control" id="validationDefault03" required>
                 </div>
-                <div class="input-group mb-3 py-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon1">#</span>
-                    </div>
-                    <input type="text" class="form-control" placeholder="Etiquetas" aria-label="Etiquetas"
-                        aria-describedby="basic-addon1">
-                </div>
-                <div class="row justify-content-end">
-                    <div class="col-sm-6 col-md-5 col-lg-2">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown">
-                                Categoría
-                            </button>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Mundo</a>
-                                <a class="dropdown-item" href="#">Política</a>
-                                <a class="dropdown-item" href="#">Nacional</a>
-                                <a class="dropdown-item" href="#">Deportes</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-end py-3">
-                        <div class="col-sm-6 col-md-5 col-lg-2">
-                            <button type="submit" class="btn btn-danger">Subir</button>
+                <div class="mb-3">
+                    <label for="formFile" class="form-label">Imagen de Portada</label>
+                    <input class="form-control" type="file" id="formFile">
+                  </div>
+                  <!-- Selectores -->
+                  <div class="col-sm-6 col-md-5 col-lg-2" style="margin-bottom: 20px;">
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown">
+                            Categoría
+                        </button>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="mundo.html">Mundo</a>
+                            <a class="dropdown-item" href="Politica.html">Política</a>
+                            <a class="dropdown-item" href="nacional.html">Nacional</a>
+                            <a class="dropdown-item" href="deportes.html">Deportes</a>
                         </div>
                     </div>
                 </div>
-                
-            </form>
+                <!-- TinyMCE -->
+                <div>
+                    <textarea placeholder="Inserte su texto aquí...">
+                     </textarea>
+                </div>
+                <!-- Fin TinyMCE -->
+            </div>
+            <div class="input-group mb-3 py-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">#</span>
+                </div>
+                <input type="text" class="form-control" placeholder="Etiquetas" aria-label="Etiquetas"
+                    aria-describedby="basic-addon1">
+            </div>
+            <!-- Selectores -->
+            <div class="row justify-content-end" style="margin-bottom: 40px;">
+                <div class="row justify-content-end py-3">
+                    <div class="col-sm-6 col-md-5 col-lg-1">
+                        <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                            data-bs-target="#exampleModal">Subir</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Tu artículo esta en proceso de revisión</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Tu artículo sera revisado por uno de nuestros administradores y se te hará llegar una
+                        notificación cuando este proceso este terminado </p>
+                </div>
+                <div class="modal-footer">
+                    <a href="escribir.html"><button type="button" class="btn btn-danger">Aceptar</button></a>
+                </div>
+            </div>
         </div>
     </div>
+    <!-- Fin modal -->
     <!-- Footer -->
     <footer class="text-center text-lg-start text-dark bg-danger mt-auto">
         <!--Social media -->
@@ -223,7 +258,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="../js/escribir.js"></script>
 
 </body>
 
