--- a/web/signup.html
+++ b/web/signup.html
@@ -53,7 +53,7 @@
                             Categorías
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Nacional</a></li>
+                            <li><a class="dropdown-item" href="nacional.html">Nacional</a></li>
                             <li><a class="dropdown-item" href="mundo.html">Mundo</a></li>
                             <li><a class="dropdown-item" href="deportes.html">Deportes</a></li>
                             <li><a class="dropdown-item" href="Politica.html">Política</a></li>
@@ -276,10 +276,6 @@
 
     </footer>
     <!-- Footer -->
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
