corrección de diseño

--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@
             <div class="carousel-item active">
               <a href="web/mundo.html"><img src="img/putin.jpg" class="d-block w-100" alt="..."></a>
               <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-danger fs-4 fw-bold">¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</h5> 
+                <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">¿Quiénes son y por qué sancionaron a las hijas de Vladimir Putin?</h5> 
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/marcha.jpg" class="d-block w-100" alt="...">
+              <img src="img/accidente.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-danger fs-4 fw-bold">First slide label</h5>
+                <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">Joven hallado muerto en Coronel: Esto es lo que se sabe del caso y las pistas que permitieron encontrar su cuerpo</h5>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/caso.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5 class="text-danger fs-4 fw-bold">Second slide label</h5>
+                <h5 class="text-danger fs-4 fw-bold shadow-lg p-3 mb-5 bg-body rounded">Second slide label</h5>
               </div>
             </div>
             
