--- a/web/signup.html
+++ b/web/signup.html
@@ -150,7 +150,7 @@
                                                 type="submit">Registrarse</button>
                                         </div>
 
-                                        <p class="d-block text-center mt-2 small">¿Tienes una cuenta? <a href="#">Inicia
+                                        <p class="d-block text-center mt-2 small">¿Tienes una cuenta? <a href="login.html">Inicia
                                                 Sesión</a></p>
 
                                         <hr class="my-4">
