--- a/web/escribir.html
+++ b/web/escribir.html
@@ -83,7 +83,7 @@
     <div class="container border border-bottom-0">
         <form action="post">
             <div class="top p-4">
-                <h1 class="text-center  titulo-web">Escritura de Artículo</h1>
+                <h1 class="text-center  titulo-web shadow ">Escritura de Artículo</h1>
                 <form action="post" style="margin: 5%;">
             </div>
             <!-- Formulario -->
